fixed slider alignment

--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -81,7 +81,7 @@ h1{
 .slidercontainer{
   /* margin: 0 0% !important;
   width: 14%; */
-  width: 48px;
+  width: 47.9px;
   display: inline-block;
 }
 
